# 4J_Claude

./: .coverage  .gitignore  AI_REPRODUCIBILITY_GUIDE.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CLAUDE.md  DETAILED_DESIGN.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_REPORT.md  DOCUMENTATION_UPDATE_REPORT_PHASE3.md  DOCUMENTATION_UPDATE_REPORT_v6.md  IMPLEMENTATION_SPEC.md  MASTER_DOCUMENTATION_INDEX.md  PHASE4_VISUALIZATION_SPEC.md  PHASE6_MULTIDB_PLAN.md  PROJECT_GOAL_REALIGNMENT.md  PROJECT_STRUCTURE_UPDATE_REPORT.md  QUICK_START_GUIDE.md  README.md  TODO.md  USAGE.md  cassandra_analysis_spec.md  database_analysis_extension_spec.md  integrated_architecture.md  llm_hybrid_analysis_spec.md  setup.py  source_code_graph_analysis_spec.md  test_evaluation_report.json
extensions/database_analysis/: EXTENSION_README.md  PHASE4_SPECIFICATION.md  README.md  pyproject.toml  requirements.txt
extensions/database_analysis/src/multidb_analyzer/: __init__.py
extensions/database_analysis/tests/: __init__.py
extensions/database_analysis/tests/unit/: __init__.py  test_elasticsearch_analyzer.py  test_redis_analyzer.py  test_sql_analyzer.py  test_transaction_analyzer.py
phase1_cassandra/: PHASE2_COMPLETION.md  PHASE2_PLAN.md  README_CASSANDRA.md  USAGE_GUIDE.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  setup.py
phase1_cassandra/src/cassandra_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
phase1_cassandra/src/cassandra_analyzer/detectors/: __init__.py  allow_filtering.py  base.py  partition_key.py  smart_allow_filtering.py
phase1_cassandra/src/cassandra_analyzer/evaluation/: metrics.py
phase1_cassandra/src/cassandra_analyzer/llm/: __init__.py  anthropic_client.py
phase1_cassandra/src/cassandra_analyzer/models/: __init__.py  cassandra_call.py  issue.py
phase1_cassandra/tests/e2e/: __init__.py  test_full_analysis.py
phase1_cassandra/tests/fixtures/: sample_dao_good.java
phase1_cassandra/tests/integration/: test_detector_pipeline.py
phase1_cassandra/tests/unit/: test_analyzer.py  test_ast_parser.py  test_cql_parser.py  test_detectors.py  test_java_parser.py  test_llm.py  test_reporters.py  test_smart_detectors.py
phase2_llm/: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LLM_INTEGRATION_TEST.md  README.md  check_env.py  conftest.py  pyproject.toml  test_real_llm_integration.py
phase2_llm/src/cassandra_analyzer/: __init__.py
phase2_llm/tests/: __init__.py
phase2_llm/tests/integration/: __init__.py  test_phase1_integration.py
phase3_neo4j/: .env.example  .gitignore  Dockerfile.test  PHASE3_COMPLETION_REPORT.md  README.md  README_CELERY.md  README_INTEGRATION_TESTS.md  TASK_12.2_COMPLETION_REPORT.md  TASK_12.3_COMPLETION_REPORT.md  demo_graph_builder.py  demo_impact_analyzer.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
phase3_neo4j/scripts/: check_test_environment.py  demo_parallel_analysis.py  run_integration_tests.bat  run_integration_tests.py  run_integration_tests.sh  start_beat.py  start_worker.py
phase3_neo4j/tests/integration/: conftest.py  test_celery_integration.py  test_graph_integration.py  test_impact_analysis_integration.py
phase3_neo4j/tests/unit/: test_celery_app.py  test_celery_tasks.py  test_graph_builder.py  test_impact_analyzer.py  test_neo4j_client.py
phase4_multidb/: DETECTOR_COMPLETION_REPORT.md  MYSQL_COMPLETION_REPORT.md  PHASE6-5_UNIFIED_DASHBOARD_DESIGN.md  PHASE6-6-C_TESTING_SUMMARY.md  README.md  TEST_COMPLETION_REPORT.md  WEEK1-2_COMPLETION_SUMMARY.md  WEEK1_PROGRESS.md  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
phase4_multidb/docs/: API_REFERENCE.md  CLI_USAGE.md  ELASTICSEARCH_GUIDE.md  EXAMPLES.md  INTEGRATION_GUIDE.md  LLM_INTEGRATION.md
phase4_multidb/tests/: __init__.py  conftest.py
phase4_multidb/tests/cli/: test_cli_llm_options.py
phase4_multidb/tests/integration/: test_integration_llm.py
phase4_multidb/tests/llm/: test_llm_enhancer.py  test_response_parser.py
phase4_multidb/tests/test_cli/: __init__.py  conftest.py  test_commands.py  test_formatters.py  test_main.py
phase4_multidb/tests/test_core/: test_base_detector.py  test_base_parser.py  test_plugin_manager.py
phase4_multidb/tests/test_detectors/: __init__.py  test_mapping_detector.py  test_script_query_detector.py  test_shard_detector.py  test_wildcard_detector.py
phase4_multidb/tests/test_integration/: __init__.py  test_elasticsearch_integration.py
phase4_multidb/tests/test_llm/: __init__.py  test_claude_client.py  test_llm_optimizer.py
phase4_multidb/tests/test_models/: __init__.py  test_es_models.py
phase4_multidb/tests/test_mysql/: __init__.py  test_models.py
phase4_multidb/tests/test_parsers/: __init__.py  test_java_client_parser.py
phase4_multidb/tests/test_unified/: test_unified_analyzer.py
phase4_visualization/: API_SPECIFICATION.md  DEPLOYMENT_GUIDE.md  DOCKER_CI_CD_SUMMARY.md  DOCKER_SETUP.md  README.md  WEEK1_2_COMPLETION_REPORT.md  WEEK3_4_COMPLETION_REPORT.md  WEEK5_6_COMPLETION_REPORT.md  WEEK7_8_COMPLETION_REPORT.md  WEEK7_8_INTEGRATION_REPORT.md  docker-compose.yml  pyproject.toml
phase4_visualization/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  __init__.py
phase4_visualization/backend/api/: main.py
phase4_visualization/backend/config/: __init__.py  settings.py
phase4_visualization/backend/models/: api_models.py
phase4_visualization/backend/neo4j_client/: client.py
phase4_visualization/backend/tests/: test_api.py  test_neo4j_client.py
phase4_visualization/data/: users.json
phase4_visualization/frontend/: .dockerignore  .env.example  .gitignore  BUILD_OPTIMIZATION.md  Dockerfile  README.md  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
phase4_visualization/frontend/e2e/: impact-analysis.spec.ts
phase4_visualization/frontend/src/: App.css  App.tsx  env.d.ts  index.css  main.tsx
phase4_visualization/scripts/: README.md  test_api_integration.py  test_api_quick.sh
(+130 files in other folders)
